# re-identification-tests

./: ADNI_3D_reid_analysis.py  ADNI_BrainAIC_reid_analysis.py  ADNI_BrainIAC_reid_analysis.py  ADNI_Nyxus_3D_reid_analysis.py  ADNI_topfea_reid_analysis.py  Nyxus_Features.py  Nyxus_Pyradiomics_Mapping.py  Pyradiomics_Features.py  README.md  analysis.py  bechmark.py  becnhmark_GRAPE_runtime.py  categorize_ADNI_dataset.py  create_2D_features_GRAPE.py  create_ADNI_BrainAIC_csv.py  create_Nyxus_2D_features_GRAPE.py  create_Nyxus_2D_features_mask_GRAPE.py  create_Nyxus_3D_features_ADNI.py  create_Pyradiomics_2D_features_GRAPE.py  create_Pyradiomics_3D_features_ADNI.py  doc.org  pyproject.toml  reid_utils.py  reidentification_utils.py  remove_background.py  remove_background.sh  results.org  select_471_RetFound.py  select_RetFound_Features.py  test_features.ipynb  utils.py  utils_pyradiomics.py
analysis/: ADNI_BrainIAC_reid_analysis.py  ADNI_Nyxus_3D_reid_analysis.py  ADNI_Pyradiomics_3D_reid_analysis.py  NIH_ChestX-ray14_CXR_reid_analysis.py  analysis.py
create_features/: create_ADNI_BrainAIC_csv.py  create_Pyradiomics_2D_features_GRAPE.py  create_Pyradiomics_3D_features_ADNI.py
cxr/: cxr_embedding_extractor.py  download_cxr_model.py  extract_CheXpert_Nyxus_features.py  extract_CheXpert_cxr_features.py  extract_ChestX-ray14_Nyxus_features.py  extract_ChestX-ray14_cxr_features.py  extract_cxr_features.py  extrcat_cxr_fearures_CheXpert.py  unzip_CheXpert.py
train_GRAPE_regressor/: train_regressor.py
train_classifier/: calssifier_utils.py  train_NN_classifier.py  train_RF.py  train_RF_classifier.py  train_classifier.py  tsne_classification.py
train_disease_classifier/: analyse_features.py  calssifier_utils.py  get_feature_importance.py  read_features.py  save_Nyxus_Texture_data.py  train_NN_classifier.py  train_RF_classifier.py  train_xgbboost.py
train_gender_classifier/: calssifier_utils.py  train_NN_classifier.py
