[project]
name = "re_identification"
version = "0.1.0"
description = "Brain MRI Re-identification Project"
requires-python = ">=3.8"
dependencies = [
    "antspyx>=0.6.1",
    "intensity-normalization>=2.2.4",
    "tqdm>=4.67.1",
    "nyxusmed @ git+ssh://git@github.com/AretixOS/nyxusmed.git",
    "tabulate>=0.9.0",
    "aiofiles==23.2.1",
    "aiohttp==3.9.5",
    "anyio==4.3.0",
    "asgiref==3.8.1",
    "astroid==3.1.0",
    "bcrypt==4.1.3",
    "chromadb==0.5.3",
    "fastapi==0.110.2",
    "h5py==3.11.0",
    "imagecodecs==2023.9.18",
    "imageio==2.34.1",
    "matplotlib==3.8.3",
    "monai==1.3.1",
    "numpy==1.26.4",
    "opencv-python==4.10.0.82",
    "pandas==1.5.3",
    "pillow==10.2.0",
    "pydantic==1.10.15",
    "pydicom==2.4.4",
    "python-multipart==0.0.9",
    "scikit-image==0.23.2",
    "scikit-learn==1.4.2",
    "scipy==1.12.0",
    "torch==2.2.1+cu118",
    "torchaudio==2.2.1+cu118",
    "torchvision==0.17.1+cu118",
    "tqdm==4.66.2",
    "uvicorn==0.23.1"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
    "pytest",
    "pytest-cov"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"


