[project]
name = "re-identification"
version = "0.1.0"
description = "General tools for medical imaging"
readme = "README.md"
authors = [
    { name = "Nazanin Donyapour", email = "nazanin.donyapour@axleinfo.com" }
]

requires-python = ">=3.11"
dependencies = [
    "antspyx>=0.6.1",
    "intensity-normalization>=2.2.4",
    "tqdm>=4.67.1",
    "nyxusmed @ git+ssh://git@github.com/AretixOS/nyxusmed.git",
    "tabulate>=0.9.0",
    "torch==2.2.1",
    "timm>=1.0.19",
    "chromadb>=1.0.16",
    "pillow>=11.3.0",
    "skorch>=1.2.0",
    "seaborn>=0.13.2",
    "openpyxl>=3.1.5",
    "ipdb>=0.13.13",
    "imblearn>=0.0",
    "xgboost>=3.0.5",
    "plotly>=6.3.0",
    "huggingface-hub>=0.34.4",
    "pypng>=0.20220715.0",
    "tensorflow>=2.18.1",
    "tensorflow-text>=2.18.1",
    "tensorflow-hub>=0.16.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Disable automatic package discovery
packages = []

# If you want to include specific packages later, you can do:
# packages = ["cxr"]  # Only if cxr/ has __init__.py
